--- a/style.css
+++ b/style.css
@@ -59,5 +59,10 @@ body{
     padding-bottom: 5px;
 }
 #clearbtn{
+    width: fit-content;
     color: red;
+    padding-left: 32px;
+    padding-right: 32px;
+    font-weight: bold;
+    margin-right: 44px;
 }
